# hane

./: Cargo.toml  LICENSE  Makefile
.github/workflows/: main.yml
hane-cli/: Cargo.toml
hane-cli/src/: main.rs
hane-ii/: Cargo.toml
hane-ii/src/: main.rs
hane-kernal/: Cargo.toml
hane-kernel/: Cargo.toml
hane-kernel/src/: entry.rs  error.rs  global.rs  lib.rs  sort.rs  stack.rs  term.rs
hane-syntax/: Cargo.toml
hane-syntax/src/: eval.rs  grammar.pest  lib.rs  lower.rs  parser.rs  print.rs
hane-unify/: Cargo.toml
hane-unify/src/: term.rs
hanec/: Cargo.toml
hanec/src/: main.rs
src/: main.rs
tests/: and.lower  and.v  conn.lower  conn.out  conn.v  failparse1.parse.err  failparse1.v  imply.lower  imply.type  imply.v  prop_in_prop.err  prop_in_prop.v  scoped_err.err  scoped_err.lower  scoped_err.v
tests/forall/: two_args_use_first.lower  two_args_use_first.v  two_args_use_second.lower  two_args_use_second.v
tests/fun/: more_complex.out  more_complex.v  parethesis_around_arg.out  parethesis_around_arg.v  simple.out  simple.v  two_args_use_first.v  two_args_use_second.v
tests/inductive/: logic.lower  logic.out  logic.v  nat.lower  nat.v  positivity.err  positivity.lower  positivity.v  swapped_constructor.err  swapped_constructor.lower  swapped_constructor.v  types.out  types.v
tests/name_collisions/: double_axiom.lower.err  double_axiom.v  double_constructor.lower.err  double_constructor.v  double_def.lower.err  double_def.v  double_ind.lower.err  double_ind.v
tests/nested/: failparse1.parse.err  prop_in_prop.err  prop_in_prop.lower
(+24 files in other folders)
