[workspace]
members = [
    "hane-kernel",
    "hane-unify",
    "hane-syntax",
]

[package]
name = "hane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hane-kernel = { path="hane-kernel" }
hane-syntax = { path="hane-syntax" }
walkdir = "2.3.2"
